# usdfc-terminal

./: .claude.md  .dockerignore  .env.example  .gitignore  ALL_CHARTS_DATA_SOURCES.md  ANALYSIS_QUICK_SUMMARY.md  API.md  BASELINE_MEASUREMENTS.md  BUILD_OPTIMIZATION_PLAN.md  CHANGELOG.md  CODEBASE_ANALYSIS_REPORT.md  COMPLETE_FINDINGS_ALL_METRICS.md  COMPLETE_TEST_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.original  Dockerfile  Dockerfile.alpine  Dockerfile.production  Dockerfile.railway  FINAL_IMPLEMENTATION_READY.md  FINAL_SOLUTIONS_ALL_METRICS.md  FIX_PLAN_CURVES.md  FLAT_LINES_INVESTIGATION.md  GLM_ANALYSIS_REPORT.md  GLM_ANALYSIS_REPORT.xml  GLM_OUTPUT_PREFIX.md  GLM_OUTPUT_PREFIX.xml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_TODO_PLAN.md  INSTALL.md  INVESTIGATION_SUMMARY.md  LICENSE  Makefile.toml  NEXTJS_MIGRATION_ANALYSIS_REPORT.md  PRICE_CHART_DATA_FLOW.md  RAILWAY_DEPLOYMENT_TODO.md  README.md  REALTIME_FIX_PLAN.md  SERVER_FUNCTION_FIX_PLAN.md  (+26 more)
.cargo/: config.toml
.github/workflows/: ci.yml  docker-build.yml
.railway/: config.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/backend/: Cargo.toml
crates/backend/src/: address_conv.rs  blockscout.rs  cache.rs  circuit_breaker.rs  fileserv.rs  gecko.rs  historical.rs  lib.rs  rpc.rs  server_fn.rs  state.rs  subgraph.rs
crates/backend/src/api/: handlers.rs  mod.rs  models.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  format.rs  lib.rs  types.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: app.rs  data.rs  global_metrics.rs  lib.rs  main.rs
crates/terminal/src/components/: controls.rs  data_table.rs  error_boundary.rs  footer.rs  header.rs  icons.rs  loading.rs  metric_card.rs  pagination.rs  sidebar.rs  tabs.rs
crates/terminal/src/components/advanced_chart/: canvas.rs  container.rs  header.rs  legend.rs  mod.rs  series.rs  tooltip.rs
crates/terminal/src/pages/: address.rs  advanced.rs  alerts.rs  analytics.rs  api_reference.rs  collateral.rs  contracts.rs  dashboard.rs  entities.rs  export.rs  flow.rs  infrastructure.rs  lending.rs  mod.rs  network.rs  protocol.rs  sankey.rs  stability.rs  supply.rs  tools.rs  transactions.rs
docs/: API_INTEGRATION_GUIDE.md  ARCHITECTURE.md  CLEAN_CODE_PLAN.md  CODEBASE_OVERVIEW.md  HARDCODED_DATA.md  IMPLEMENTATION_PLAN.md  KARMA_APPLICATION.md  LAYERZERO_REDESIGN_PLAN.md  MONITORING.md  PHASE1_UI_UX_AUDIT.md  PHASE2_TECHNICAL_AUDIT.md  REVIEW_FINDINGS.md  architecture.d2  dataflow.d2  openapi.yaml
scripts/: advanced_analytics_fetcher_v3.py  setup-aws-sccache.sh  tradingview_chart_data.py
src/: blockscout.rs  cache.rs  config.rs  data.rs  format.rs  gecko.rs  global_metrics.rs  historical.rs  lib.rs  main.rs  rpc.rs  server_fn.rs  state.rs  styles.css  subgraph.rs  types.rs
src/api/: handlers.rs  mod.rs  models.rs
src/components/: charts.rs  footer.rs  gauge.rs  header.rs  memo.rs  metric_card.rs  mod.rs
src/components/advanced_chart/: canvas.rs  container.rs  container.rs:150-230  header.rs  legend.rs  series.rs
src/pages/: address.rs  advanced.rs  alerts.rs  analytics.rs  architecture.rs  collateral.rs  dashboard.rs  entities.rs  export.rs  flow.rs  infrastructure.rs  lending.rs  network.rs  protocol.rs  sankey.rs  stability.rs  supply.rs  tools.rs  transactions.rs
