[package]
name = "usdfc-analytics-terminal"
version = "0.1.0"
edition = "2021"
authors = ["USDFC Team"]
description = "Real-time analytics terminal for the USDFC protocol"
repository = "https://github.com/usdfc/analytics-terminal"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.leptos]
output-name = "usdfc-terminal"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "src/styles.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
watch = true
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
wasm-opt-features = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]

[dependencies]
# Core framework
axum = { version = "0.7", optional = true, features = ["macros"] }
leptos = { version = "0.6", default-features = false }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip"], optional = true }

futures = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling - wasm-bindgen only for hydrate builds
chrono = { version = "0.4", features = ["serde", "alloc"], default-features = false }

# Browser APIs (client only)
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "DomRect",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Location",
    "History",
    "Navigator",
    "Clipboard",
    "UrlSearchParams"
], optional = true }
js-sys = { version = "0.3", optional = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"], optional = true }
gloo-net = { version = "0.5", optional = true }

# Async traits
async-trait = "0.1"

# Lazy static initialization
once_cell = "1.19"

# Rate limiting
governor = { version = "0.6", optional = true }

# Server function registration (required for Linux SSR)
inventory = { version = "0.3", optional = true }

# Decimal for precise financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Thiserror for structured errors
thiserror = "1.0"

# SQLite persistence (SSR only)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
hex = { version = "0.4", optional = true }
fvm_shared = { version = "4", optional = true }

# Blockchain interaction (SSR only - doesn't work on WASM)
ethers = { version = "2.0", default-features = false, features = ["legacy"], optional = true }

# Environment variables
dotenvy = "0.15"

# GraphQL client
graphql_client = { version = "0.14", optional = true }

http = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
# Don't enable both ssr and hydrate - cargo-leptos handles this
default = []

csr = [
    "leptos/csr",
    "leptos_meta/csr",
    "leptos_router/csr",
    "dep:gloo-timers",
    "dep:web-sys",
    "dep:js-sys"
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:reqwest",
    "dep:graphql_client",
    "dep:inventory",
    "dep:hex",
    "dep:fvm_shared",
    "dep:ethers",
    "dep:futures",
    "dep:rusqlite",
    "dep:governor"
]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:gloo-timers",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-bindgen-futures"
]

# Data source feature flags
http = ["dep:reqwest", "dep:gloo-net"]
subgraph = ["dep:graphql_client"]
realdata = ["http", "subgraph"]

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 3
strip = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
strip = true

# Security patches for transitive dependencies
# RUSTSEC-2025-0009: ring 0.16.20 has AES overflow vulnerability
# Note: Cannot patch ring directly as jsonwebtoken 8.x requires ring 0.16.x API
# This vulnerability is in ethers -> ethers-providers -> jsonwebtoken -> ring
# The ethers ecosystem (2.0.14) hasn't updated to jsonwebtoken 9.x yet
# Consider migrating to alloy-rs when ready: https://github.com/alloy-rs/alloy
