[workspace]
members = [
    "crates/core",
    "crates/backend",
    "crates/terminal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["USDFC Team"]
description = "Real-time analytics terminal for the USDFC protocol"
repository = "https://github.com/usdfc/analytics-terminal"
license = "MIT"

# Workspace-wide dependency versions for consistency
[workspace.dependencies]
# Core type dependencies (lightweight, no proc-macros in core)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.39", default-features = false, features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
thiserror = "1.0"
once_cell = "1.21"

# Leptos framework
leptos = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
leptos_axum = "0.6"

# Web framework (backend only)
axum = { version = "0.7", default-features = false }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false }

# Async runtime
tokio = { version = "1", default-features = false }

# HTTP client (optimized)
reqwest = { version = "0.11", default-features = false }

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# WASM
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Utils
async-trait = "0.1"
dotenvy = "0.15"
governor = "0.6"
fvm_shared = "4"

# Workspace-wide build profiles
[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 3
strip = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
strip = true

# Optimized profile for Railway CI builds
# Balances build speed vs binary size for faster deployments
[profile.railway]
inherits = "release"
lto = "thin"           # Thin LTO instead of full (2-3x faster linking)
codegen-units = 4      # Parallel codegen for faster builds
opt-level = 2          # O2 instead of Oz (faster compile, similar size)
strip = true
panic = "abort"
debug = false          # Disable debug info (saves 1-2 min in CI)
incremental = false    # Disable incremental (not useful in CI)
