[workspace]
members = [
    "crates/core",
    "crates/api",
    "crates/backend",
    "crates/terminal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["USDFC Team"]
description = "Real-time analytics terminal for the USDFC protocol"
repository = "https://github.com/usdfc/analytics-terminal"
license = "MIT"

# Workspace-wide dependency versions for consistency
[workspace.dependencies]
# Core type dependencies (lightweight, no proc-macros in core)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.39", default-features = false, features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
thiserror = "1.0"
once_cell = "1.21"

# Leptos framework
leptos = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
leptos_axum = "0.6"

# Web framework (backend only) - Week 3 optimized with minimal features
axum = { version = "0.7", default-features = false, features = ["macros", "json", "query", "tokio", "http1", "http2"] }
tower = { version = "0.4", default-features = false, features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", default-features = false, features = ["fs", "cors", "compression-gzip"] }

# Async runtime - Week 3 optimized with only required features
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-util"] }

# HTTP client (optimized) - Week 3: minimal features for RPC/subgraph calls
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# WASM
# Pinned to 0.2.105 to match cargo-leptos 0.2.47's bundled wasm-bindgen-cli
wasm-bindgen = "=0.2.105"
console_error_panic_hook = "0.1"

# Utils
async-trait = "0.1"
dotenvy = "0.15"
governor = "0.6"
fvm_shared = "4"

# Workspace-wide build profiles
[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 3
strip = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
strip = true

# Optimized profile for Railway CI builds
# Balances build speed vs binary size for faster deployments
[profile.railway]
inherits = "release"
lto = "thin"           # Thin LTO instead of full (2-3x faster linking)
codegen-units = 4      # Parallel codegen for faster builds
opt-level = 2          # O2 instead of Oz (faster compile, similar size)
strip = true
panic = "abort"
debug = false          # Disable debug info (saves 1-2 min in CI)
incremental = false    # Disable incremental (not useful in CI)

# CI profile: Optimized for build speed in CI/CD pipelines
# Trades some runtime performance for significantly faster compilation
[profile.ci]
inherits = "release"
lto = false            # Disable LTO entirely (saves 90-120s in link time)
opt-level = 2          # Good optimization without extreme compile time
codegen-units = 16     # Maximum parallelism for faster builds
strip = true
panic = "abort"
debug = false
incremental = false    # Always false in CI environments

# Production profile: Optimized for maximum runtime performance
# Used for final production builds when build time is not critical
[profile.production]
inherits = "release"
lto = "thin"           # Thin LTO: good performance, reasonable compile time
opt-level = 3          # Maximum optimization level
codegen-units = 1      # Single codegen unit for best optimization
strip = true
panic = "abort"
debug = false
incremental = false
