[package]
name = "usdfc-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
# Internal dependencies
usdfc-core = { path = "../core" }

# Leptos SSR
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }

# Web framework
axum = { workspace = true, features = ["macros", "json", "query"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors", "compression-gzip"] }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP client (with rustls for no OpenSSL)
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# Persistence
rusqlite = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Serialization (with derives allowed in backend)
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

# Filecoin address conversion
fvm_shared = { workspace = true }

# Utils
async-trait = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }

# Decimal
rust_decimal = { version = "1.39", features = ["serde"] }
rust_decimal_macros = "1.39"

# Date/time
chrono = { workspace = true, features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
