[package]
name = "usdfc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
# Minimal dependencies - no proc-macros for fast compilation
serde = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true, features = ["alloc"] }
thiserror = { workspace = true }
once_cell = { workspace = true }
