[package]
name = "usdfc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
# Minimal dependencies - Phase 3 will move serde derives to backend DTOs
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true }
chrono = { workspace = true, features = ["alloc"] }
thiserror = { workspace = true }
once_cell = { workspace = true }
dotenvy = { workspace = true }
