[package]
name = "usdfc-analytics-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# Leptos configuration
[package.metadata.leptos]
output-name = "usdfc-terminal"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "src/styles.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
watch = true
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
wasm-opt-features = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]

[dependencies]
# Internal dependencies
usdfc-core = { path = "../core" }
usdfc-backend = { path = "../backend", optional = true }

# Leptos framework
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }

# Server-side
axum = { workspace = true, optional = true, features = ["macros"] }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "macros", "signal"] }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["fs", "cors", "compression-gzip"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
http = { version = "1", optional = true }

# WASM
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { workspace = true }

# Browser APIs (hydrate only)
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "DomRect",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Location",
    "History",
    "Navigator",
    "Clipboard",
    "UrlSearchParams"
], optional = true }
js-sys = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
gloo-net = { version = "0.5", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
rust_decimal = { version = "1.39", features = ["serde"] }
rust_decimal_macros = "1.39"

# Time handling
chrono = { version = "0.4", features = ["serde", "alloc"], default-features = false }

# Utils
async-trait = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

[features]
default = []

csr = [
    "leptos/csr",
    "leptos_meta/csr",
    "leptos_router/csr",
    "dep:gloo-timers",
    "dep:web-sys",
    "dep:js-sys",
    "dep:gloo-net"
]

ssr = [
    "dep:usdfc-backend",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "dep:tracing",
    "dep:tracing-subscriber"
]

hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:gloo-timers",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:gloo-net"
]
